# difference_generator

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: pyci.yaml
gendiff/: generate_diff.py
gendiff/formats/: encoder.py  get_format.py  json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
hexlet_code/: cli.py  diff.py  file_extension.py  gendiff.py  generate_diff.py
hexlet_code/formats/: encoder.py  get_format.py  stylish.py
hexlet_code/scripts/: gendiff.py
tests/: test_generate_diff.py
tests/fixtures/: diff_file_yaml  diff_file_yaml_fplain  file1.yaml  file2.yaml
